Corrected word detection of 'metre'. It is spelled in different ways. #3

--- a/NLP Python Jupyter Notebooks/Identify data type properties/Identify data type properties.ipynb
+++ b/NLP Python Jupyter Notebooks/Identify data type properties/Identify data type properties.ipynb
@@ -6581,7 +6581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -7314,7 +7314,7 @@
        "  ('alarm', 'NN'),\n",
        "  ('system', 'NN'),\n",
        "  ('vessel', 'NNP'),\n",
-       "  ('metres', 'VBZ'),\n",
+       "  ('metre', 'VBZ'),\n",
        "  ('overall', 'JJ'),\n",
        "  ('length', 'NN'),\n",
        "  ('irrespective', 'JJ'),\n",
@@ -7335,7 +7335,7 @@
        "  ('accordance', 'NN'),\n",
        "  ('appendix', 'NNP')],\n",
        " [('vessel', 'NNP'),\n",
-       "  ('meter', 'NNS'),\n",
+       "  ('metre', 'NNS'),\n",
        "  ('overall', 'JJ'),\n",
        "  ('length', 'VBP'),\n",
        "  ('fit', 'VBN'),\n",
@@ -7613,7 +7613,7 @@
        " [('electrical', 'JJ'),\n",
        "  ('installation', 'NNS'),\n",
        "  ('vessel', 'NNP'),\n",
-       "  ('metres', 'VBZ'),\n",
+       "  ('metre', 'VBZ'),\n",
        "  ('overall', 'JJ'),\n",
        "  ('length', 'NN'),\n",
        "  ('construct', 'VBD'),\n",
@@ -7830,7 +7830,7 @@
        "  ('section', 'NNS')]]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7873,7 +7873,9 @@
     "            \n",
     "            # Custom lemmatizer\n",
     "            if lemmatized_word == 'metres':\n",
-    "                lemmatized_word == 'metre'\n",
+    "                lemmatized_word = 'metre' # (Commonwealth spelling)\n",
+    "            elif lemmatized_word == 'meter': # (American spelling)\n",
+    "                lemmatized_word = 'metre'\n",
     "            \n",
     "            lemmatized_single_words_with_tag.append((lemmatized_word, pos))\n",
     "    \n",
@@ -7891,7 +7893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -8145,7 +8147,7 @@
        " (119, 1252, 1262)]"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8178,7 +8180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -8925,7 +8927,7 @@
        " (738, 76, 'alarm', 'NN'),\n",
        " (739, 76, 'system', 'NN'),\n",
        " (740, 76, 'vessel', 'NNP'),\n",
-       " (741, 76, 'metres', 'VBZ'),\n",
+       " (741, 76, 'metre', 'VBZ'),\n",
        " (742, 76, 'overall', 'JJ'),\n",
        " (743, 76, 'length', 'NN'),\n",
        " (744, 76, 'irrespective', 'JJ'),\n",
@@ -9187,7 +9189,7 @@
        " ...]"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9235,16 +9237,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'smoke (455) uptake (456) place (457) closer (458) cm (459) insulate (460) bulkhead (461)'"
+       "['761 - vessel',\n",
+       " '762 - meter',\n",
+       " '763 - overall',\n",
+       " '764 - length',\n",
+       " '765 - fit',\n",
+       " '766 - least',\n",
+       " '767 - smoke',\n",
+       " '768 - detector',\n",
+       " '769 - heat',\n",
+       " '770 - detector',\n",
+       " '771 - machinery',\n",
+       " '772 - space',\n",
+       " '773 - least',\n",
+       " '774 - smoke',\n",
+       " '775 - detector',\n",
+       " '776 - recreational',\n",
+       " '777 - space',\n",
+       " '778 - least',\n",
+       " '779 - smoke',\n",
+       " '780 - detector',\n",
+       " '781 - wheelhouse']"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9257,16 +9279,17 @@
     "sentence = []\n",
     "\n",
     "for (index_on_word,index_on_sentence,word,pos) in word_index_for_lookup:\n",
-    "    if index_on_sentence == 48:\n",
+    "    if index_on_sentence == 77:\n",
     "        \n",
-    "        sentence.append(word + \" (\" + str(index_on_word) + \")\")\n",
+    "        sentence.append(str(index_on_word) + \" - \" + word)\n",
     "        \n",
-    "\" \".join(sentence)"
+    "\" \".join(sentence)\n",
+    "list(sentence)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9296,19 +9319,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[('cm', [38, 42, 44, 45, 48, 49, 49, 52, 89]),\n",
-       " ('metre', [35, 64, 70, 106, 107, 109, 112]),\n",
+       " ('metre', [35, 64, 70, 76, 105, 106, 107, 109, 112]),\n",
        " ('v', [105, 106, 107, 109]),\n",
        " ('mm', [40])]"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9341,7 +9364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -9372,7 +9395,7 @@
        "   112])]"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9402,7 +9425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -9420,7 +9443,9 @@
        " (52, 'cm'),\n",
        " (64, 'metre'),\n",
        " (70, 'metre'),\n",
+       " (76, 'metre'),\n",
        " (89, 'cm'),\n",
+       " (105, 'metre'),\n",
        " (105, 'v'),\n",
        " (106, 'metre'),\n",
        " (106, 'v'),\n",
@@ -9431,7 +9456,7 @@
        " (112, 'metre')]"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9451,7 +9476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -9470,11 +9495,13 @@
       "First detection in sentence 35 - metre\n",
       "First detection in sentence 64 - metre\n",
       "First detection in sentence 70 - metre\n",
+      "First detection in sentence 76 - metre\n",
+      "First detection in sentence 105 - metre\n",
       "First detection in sentence 106 - metre\n",
       "First detection in sentence 107 - metre\n",
       "First detection in sentence 109 - metre\n",
       "First detection in sentence 112 - metre\n",
-      "First detection in sentence 105 - v\n",
+      "New detection in sentence 105 - v\n",
       "New detection in sentence 106 - v\n",
       "New detection in sentence 107 - v\n",
       "New detection in sentence 109 - v\n",
@@ -9496,15 +9523,16 @@
        "             35: ['metre'],\n",
        "             64: ['metre'],\n",
        "             70: ['metre'],\n",
+       "             76: ['metre'],\n",
+       "             105: ['metre', 'v'],\n",
        "             106: ['metre', 'v'],\n",
        "             107: ['metre', 'v'],\n",
        "             109: ['metre', 'v'],\n",
        "             112: ['metre'],\n",
-       "             105: ['v'],\n",
        "             40: ['mm']})"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9541,7 +9569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -9613,7 +9641,7 @@
        "             89: ['least']})"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9650,7 +9678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -9668,13 +9696,13 @@
        "             35: (['metre'], ['length']),\n",
        "             64: (['metre'], ['length']),\n",
        "             70: (['metre'], ['length']),\n",
+       "             76: (['metre'], ['length']),\n",
+       "             105: (['metre', 'v'], ['length']),\n",
        "             106: (['metre', 'v'], ['length']),\n",
        "             107: (['metre', 'v'], ['length']),\n",
        "             109: (['metre', 'v'], ['length']),\n",
        "             112: (['metre'], ['length', 'least']),\n",
-       "             105: (['v'], ['length']),\n",
        "             40: (['mm'], ['least']),\n",
-       "             76: (0, ['length']),\n",
        "             77: (0, ['length', 'least']),\n",
        "             41: (0, ['least']),\n",
        "             46: (0, ['least']),\n",
@@ -9684,7 +9712,7 @@
        "             88: (0, ['least'])})"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9716,7 +9744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -9734,15 +9762,16 @@
        "             35: (['metre'], ['length']),\n",
        "             64: (['metre'], ['length']),\n",
        "             70: (['metre'], ['length']),\n",
+       "             76: (['metre'], ['length']),\n",
+       "             105: (['metre', 'v'], ['length']),\n",
        "             106: (['metre', 'v'], ['length']),\n",
        "             107: (['metre', 'v'], ['length']),\n",
        "             109: (['metre', 'v'], ['length']),\n",
        "             112: (['metre'], ['length', 'least']),\n",
-       "             105: (['v'], ['length']),\n",
        "             40: (['mm'], ['least'])})"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9768,15 +9797,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "defaultdict(int,\n",
-       "            {76: (0, ['length']),\n",
-       "             77: (0, ['length', 'least']),\n",
+       "            {77: (0, ['length', 'least']),\n",
        "             41: (0, ['least']),\n",
        "             46: (0, ['least']),\n",
        "             78: (0, ['least']),\n",
@@ -9785,7 +9813,7 @@
        "             88: (0, ['least'])})"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9821,7 +9849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -9830,6 +9858,7 @@
        "[(1045, 105, 'electrical', 'JJ'),\n",
        " (1046, 105, 'installation', 'NNS'),\n",
        " (1047, 105, 'vessel', 'NNP'),\n",
+       " (1048, 105, 'metre', 'VBZ'),\n",
        " (1049, 105, 'overall', 'JJ'),\n",
        " (1051, 105, 'construct', 'VBD'),\n",
        " (1052, 105, 'electrical', 'JJ'),\n",
@@ -9843,7 +9872,7 @@
        " (1062, 105, 'installation', 'NNS')]"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9870,7 +9899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -9990,6 +10019,44 @@
        " (685, 70, 'nordic', 'NNP'),\n",
        " (686, 70, 'boat', 'NNP'),\n",
        " (687, 70, 'standard', 'NNP'),\n",
+       " (736, 76, 'fire', 'NNP'),\n",
+       " (737, 76, 'detection', 'NN'),\n",
+       " (738, 76, 'alarm', 'NN'),\n",
+       " (739, 76, 'system', 'NN'),\n",
+       " (740, 76, 'vessel', 'NNP'),\n",
+       " (742, 76, 'overall', 'JJ'),\n",
+       " (744, 76, 'irrespective', 'JJ'),\n",
+       " (745, 76, 'year', 'NN'),\n",
+       " (746, 76, 'construction', 'NN'),\n",
+       " (747, 76, 'fire', 'VB'),\n",
+       " (748, 76, 'detection', 'NN'),\n",
+       " (749, 76, 'system', 'NN'),\n",
+       " (750, 76, 'fire', 'NN'),\n",
+       " (751, 76, 'alarm', 'NN'),\n",
+       " (752, 76, 'system', 'NN'),\n",
+       " (753, 76, 'machinery', 'NN'),\n",
+       " (754, 76, 'space', 'NNS'),\n",
+       " (755, 76, 'smoke', 'VBD'),\n",
+       " (756, 76, 'alarm', 'NN'),\n",
+       " (757, 76, 'system', 'NN'),\n",
+       " (758, 76, 'cabin', 'VBZ'),\n",
+       " (759, 76, 'accordance', 'NN'),\n",
+       " (760, 76, 'appendix', 'NNP'),\n",
+       " (1045, 105, 'electrical', 'JJ'),\n",
+       " (1046, 105, 'installation', 'NNS'),\n",
+       " (1047, 105, 'vessel', 'NNP'),\n",
+       " (1049, 105, 'overall', 'JJ'),\n",
+       " (1051, 105, 'construct', 'VBD'),\n",
+       " (1052, 105, 'electrical', 'JJ'),\n",
+       " (1053, 105, 'installation', 'NNS'),\n",
+       " (1054, 105, 'voltage', 'NNS'),\n",
+       " (1056, 105, 'satisfy', 'VB'),\n",
+       " (1057, 105, 'requirement', 'NNS'),\n",
+       " (1058, 105, 'nordic', 'NNP'),\n",
+       " (1059, 105, 'boat', 'NNP'),\n",
+       " (1060, 105, 'standard', 'NNP'),\n",
+       " (1061, 105, 'electrical', 'JJ'),\n",
+       " (1062, 105, 'installation', 'NNS'),\n",
        " (1063, 106, 'vessel', 'NNS'),\n",
        " (1065, 106, 'overall', 'JJ'),\n",
        " (1067, 106, 'construct', 'VBD'),\n",
@@ -10054,22 +10121,6 @@
        " (1154, 112, 'require', 'VBN'),\n",
        " (1155, 112, 'alarm', 'NN'),\n",
        " (1156, 112, 'system', 'NN'),\n",
-       " (1045, 105, 'electrical', 'JJ'),\n",
-       " (1046, 105, 'installation', 'NNS'),\n",
-       " (1047, 105, 'vessel', 'NNP'),\n",
-       " (1048, 105, 'metres', 'VBZ'),\n",
-       " (1049, 105, 'overall', 'JJ'),\n",
-       " (1051, 105, 'construct', 'VBD'),\n",
-       " (1052, 105, 'electrical', 'JJ'),\n",
-       " (1053, 105, 'installation', 'NNS'),\n",
-       " (1054, 105, 'voltage', 'NNS'),\n",
-       " (1056, 105, 'satisfy', 'VB'),\n",
-       " (1057, 105, 'requirement', 'NNS'),\n",
-       " (1058, 105, 'nordic', 'NNP'),\n",
-       " (1059, 105, 'boat', 'NNP'),\n",
-       " (1060, 105, 'standard', 'NNP'),\n",
-       " (1061, 105, 'electrical', 'JJ'),\n",
-       " (1062, 105, 'installation', 'NNS'),\n",
        " (365, 40, 'smoke', 'NNP'),\n",
        " (366, 40, 'uptake', 'JJ'),\n",
        " (367, 40, 'exhaust', 'NN'),\n",
@@ -10086,7 +10137,7 @@
        " (380, 40, 'fix', 'VB')]"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10124,7 +10175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -10167,7 +10218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -10237,6 +10288,33 @@
       "(685, 70, 'nordic', 'NNP')\n",
       "(686, 70, 'boat', 'NNP')\n",
       "(687, 70, 'standard', 'NNP')\n",
+      "(736, 76, 'fire', 'NNP')\n",
+      "(737, 76, 'detection', 'NN')\n",
+      "(738, 76, 'alarm', 'NN')\n",
+      "(739, 76, 'system', 'NN')\n",
+      "(740, 76, 'vessel', 'NNP')\n",
+      "(745, 76, 'year', 'NN')\n",
+      "(746, 76, 'construction', 'NN')\n",
+      "(748, 76, 'detection', 'NN')\n",
+      "(749, 76, 'system', 'NN')\n",
+      "(750, 76, 'fire', 'NN')\n",
+      "(751, 76, 'alarm', 'NN')\n",
+      "(752, 76, 'system', 'NN')\n",
+      "(753, 76, 'machinery', 'NN')\n",
+      "(754, 76, 'space', 'NNS')\n",
+      "(756, 76, 'alarm', 'NN')\n",
+      "(757, 76, 'system', 'NN')\n",
+      "(759, 76, 'accordance', 'NN')\n",
+      "(760, 76, 'appendix', 'NNP')\n",
+      "(1046, 105, 'installation', 'NNS')\n",
+      "(1047, 105, 'vessel', 'NNP')\n",
+      "(1053, 105, 'installation', 'NNS')\n",
+      "(1054, 105, 'voltage', 'NNS')\n",
+      "(1057, 105, 'requirement', 'NNS')\n",
+      "(1058, 105, 'nordic', 'NNP')\n",
+      "(1059, 105, 'boat', 'NNP')\n",
+      "(1060, 105, 'standard', 'NNP')\n",
+      "(1062, 105, 'installation', 'NNS')\n",
       "(1063, 106, 'vessel', 'NNS')\n",
       "(1069, 106, 'installation', 'NNS')\n",
       "(1070, 106, 'voltage', 'NNS')\n",
@@ -10269,15 +10347,6 @@
       "(1153, 112, 'light', 'NNS')\n",
       "(1155, 112, 'alarm', 'NN')\n",
       "(1156, 112, 'system', 'NN')\n",
-      "(1046, 105, 'installation', 'NNS')\n",
-      "(1047, 105, 'vessel', 'NNP')\n",
-      "(1053, 105, 'installation', 'NNS')\n",
-      "(1054, 105, 'voltage', 'NNS')\n",
-      "(1057, 105, 'requirement', 'NNS')\n",
-      "(1058, 105, 'nordic', 'NNP')\n",
-      "(1059, 105, 'boat', 'NNP')\n",
-      "(1060, 105, 'standard', 'NNP')\n",
-      "(1062, 105, 'installation', 'NNS')\n",
       "(365, 40, 'smoke', 'NNP')\n",
       "(367, 40, 'exhaust', 'NN')\n",
       "(368, 40, 'pipe', 'NNS')\n",
@@ -10311,7 +10380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -10326,11 +10395,12 @@
       "(318, 35, 'vessel', 'NNS')\n",
       "(628, 64, 'vessel', 'NNP')\n",
       "(672, 70, 'vessel', 'NNP')\n",
+      "(740, 76, 'vessel', 'NNP')\n",
+      "(1047, 105, 'vessel', 'NNP')\n",
       "(1063, 106, 'vessel', 'NNS')\n",
       "(1077, 107, 'vessel', 'NNS')\n",
       "(1095, 109, 'vessel', 'NNS')\n",
       "(1122, 112, 'vessel', 'NNS')\n",
-      "(1047, 105, 'vessel', 'NNP')\n",
       "(368, 40, 'pipe', 'NNS')\n",
       "(372, 40, 'pipe', 'NNS')\n"
      ]
@@ -10397,7 +10467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -10412,6 +10482,9 @@
        " 'vessel,length,metre',\n",
        " 'vessel,length,metre',\n",
        " 'vessel,length,metre',\n",
+       " 'vessel,length,metre',\n",
+       " 'vessel,length,v',\n",
+       " 'vessel,length,metre',\n",
        " 'vessel,length,v',\n",
        " 'vessel,length,metre',\n",
        " 'vessel,length,v',\n",
@@ -10419,12 +10492,11 @@
        " 'vessel,length,v',\n",
        " 'vessel,length,metre',\n",
        " 'vessel,least,metre',\n",
-       " 'vessel,length,v',\n",
        " 'pipe,least,mm',\n",
        " 'pipe,least,mm']"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10506,7 +10578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -10520,7 +10592,7 @@
        " ('pipe', 'least', 'mm')]"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10540,7 +10612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
