--- a/NLP Python Jupyter Notebooks/Identify data type properties/Identify data type properties.ipynb
+++ b/NLP Python Jupyter Notebooks/Identify data type properties/Identify data type properties.ipynb
@@ -9282,6 +9282,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#\n",
+    "# Create custom bigrams of sentences\n",
+    "#\n",
+    "\n",
+    "for (index_on_word,index_on_sentence,word,pos) in word_index_for_lookup:"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 246,
    "metadata": {},
    "outputs": [],
@@ -9864,7 +9877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -9873,8 +9886,8 @@
        "[(1047, 105, 'electrical', 'JJ'),\n",
        " (1048, 105, 'installation', 'NNS'),\n",
        " (1049, 105, 'vessel', 'NNP'),\n",
-       " (1050, 105, 'metre', 'VBZ'),\n",
        " (1051, 105, 'overall', 'JJ'),\n",
+       " (1052, 105, 'length', 'NN'),\n",
        " (1053, 105, 'construct', 'VBD'),\n",
        " (1054, 105, 'electrical', 'JJ'),\n",
        " (1055, 105, 'installation', 'NNS'),\n",
@@ -9887,7 +9900,7 @@
        " (1064, 105, 'installation', 'NNS')]"
       ]
      },
-     "execution_count": 255,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9902,13 +9915,12 @@
     "# Idea: Remove the identified words from the sentences before continuing to searching in them\n",
     "\n",
     "selected_line_in_a_list_of_words = []\n",
-    "list_of_earlier_findings = ['v', 'voltage','length','metres']\n",
     "\n",
     "for (word_index_number,line_index_number,word_in_text,pos) in word_index_for_lookup:\n",
     "    if line_index_number == 105:\n",
     "        selected_line_in_a_list_of_words.append((word_index_number,line_index_number,word_in_text,pos))\n",
     "\n",
-    "line_with_findings_removed = [(word_index_number,line_index_number,word_in_text,pos) for (word_index_number,line_index_number,word_in_text,pos) in selected_line_in_a_list_of_words if word_in_text not in list_of_earlier_findings]\n",
+    "line_with_findings_removed = [(word_index_number,line_index_number,word_in_text,pos) for (word_index_number,line_index_number,word_in_text,pos) in selected_line_in_a_list_of_words if word_in_text not in list_of_known_data_types]\n",
     "line_with_findings_removed"
    ]
   },
