--- a/NLP Python Jupyter Notebooks/Identify data type properties - Multi words/Identify data type properties - Multi words.ipynb
+++ b/NLP Python Jupyter Notebooks/Identify data type properties - Multi words/Identify data type properties - Multi words.ipynb
@@ -1576,6 +1576,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# After this point, dont edit the source text, as we need a stable index number on it"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 90,
    "metadata": {},
