Identify bigram data properties by vocabulary. #3

--- a/NLP Python Jupyter Notebooks/Identify things by vocabulary/Identify things by vocabulary.ipynb
+++ b/NLP Python Jupyter Notebooks/Identify things by vocabulary/Identify things by vocabulary.ipynb
@@ -649,6 +649,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Find known things from vocabulary"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -1587,6 +1594,61 @@
    "source": [
     "for (sentence_index,bigram_as_string,word_pos_tag_one,word_pos_tag_two) in forward_bigrams:\n",
     "    print(bigram_as_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('90', 'fire extinguisher'),\n",
+       " ('90', 'fire extinguisher'),\n",
+       " ('91', 'fire extinguisher'),\n",
+       " ('91', 'fire extinguisher'),\n",
+       " ('92', 'fire extinguisher'),\n",
+       " ('93', 'fire extinguisher'),\n",
+       " ('94', 'fire extinguisher'),\n",
+       " ('97', 'fire extinguisher'),\n",
+       " ('137', 'emergency light')]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get identified bigrams with sentence index number\n",
+    "\n",
+    "forward_identified_bigrams_with_sentence_index_number = []\n",
+    "\n",
+    "for (sentence_index,bigram_as_string,word_pos_tag_one,word_pos_tag_two) in forward_bigrams:\n",
+    "    \n",
+    "    if bigram_as_string in list_of_known_things:\n",
+    "        forward_identified_bigrams_with_sentence_index_number.append((sentence_index,bigram_as_string))\n",
+    "    \n",
+    "forward_identified_bigrams_with_sentence_index_number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Write to CSV file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Find "
    ]
   },
   {
