Created component: Create single word with sentence index number and POS. #3

--- a/NLP Python Jupyter Notebooks/Create bigrams with sentence index number and POS/Create bigrams with sentence index number and POS.ipynb
+++ b/NLP Python Jupyter Notebooks/Create bigrams with sentence index number and POS/Create bigrams with sentence index number and POS.ipynb
@@ -24581,7 +24581,7 @@
    ],
    "source": [
     "#\n",
-    "# Print bigram with no stopwords AND keep POS\n",
+    "# Lemmatize bigram with no stopwords AND keep POS\n",
     "#\n",
     "\n",
     "forward_result_to_csv = []\n",
