--- a/NLP Python Jupyter Notebooks/Identify things by vocabulary/Identify things by vocabulary.ipynb
+++ b/NLP Python Jupyter Notebooks/Identify things by vocabulary/Identify things by vocabulary.ipynb
@@ -1,10 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# initialize"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -21,6 +28,44 @@
    ],
    "source": [
     "!pip install nltk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#\n",
+    "# Hypotesis: We must know what to look for.\n",
+    "# Here is what we know.\n",
+    "#\n",
+    "\n",
+    "# What are the things we know?\n",
+    "list_of_known_things = ['vessel', 'emergency light', 'pipe system', 'pipe', 'fire extinguisher']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# single words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# bigrams"
    ]
   },
   {
@@ -613,23 +658,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#\n",
-    "# Hypotesis: We must know what to look for.\n",
-    "# Here is what we know.\n",
-    "#\n",
-    "\n",
-    "# What are the things we know?\n",
-    "list_of_known_things = ['vessel', 'emergency light', 'pipe system', 'pipe', 'fire extinguisher']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -661,6 +693,13 @@
     "        forward_identified_bigrams_with_sentence_index_number.append((sentence_index,bigram_as_string))\n",
     "    \n",
     "forward_identified_bigrams_with_sentence_index_number"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Print result to CSV file"
    ]
   },
   {
