Identify things by vocabulary component now supports single and double word input. #3

--- a/NLP Python Jupyter Notebooks/Identify things by vocabulary/Identify things by vocabulary.ipynb
+++ b/NLP Python Jupyter Notebooks/Identify things by vocabulary/Identify things by vocabulary.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {
     "scrolled": false
    },
@@ -18,11 +18,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: nltk in /opt/conda/lib/python3.8/site-packages (3.5)\n",
-      "Requirement already satisfied: regex in /opt/conda/lib/python3.8/site-packages (from nltk) (2020.11.13)\n",
-      "Requirement already satisfied: joblib in /opt/conda/lib/python3.8/site-packages (from nltk) (0.17.0)\n",
-      "Requirement already satisfied: tqdm in /opt/conda/lib/python3.8/site-packages (from nltk) (4.51.0)\n",
-      "Requirement already satisfied: click in /opt/conda/lib/python3.8/site-packages (from nltk) (7.1.2)\n"
+      "Requirement already satisfied: nltk in /opt/conda/lib/python3.8/site-packages (3.5)\r\n",
+      "Requirement already satisfied: joblib in /opt/conda/lib/python3.8/site-packages (from nltk) (0.17.0)\r\n",
+      "Requirement already satisfied: regex in /opt/conda/lib/python3.8/site-packages (from nltk) (2020.11.13)\r\n",
+      "Requirement already satisfied: tqdm in /opt/conda/lib/python3.8/site-packages (from nltk) (4.51.0)\r\n",
+      "Requirement already satisfied: click in /opt/conda/lib/python3.8/site-packages (from nltk) (7.1.2)\r\n"
      ]
     }
    ],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1063,7 @@
        " ...]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1093,6 +1093,97 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('3', 'vessel'),\n",
+       " ('4', 'vessel'),\n",
+       " ('4', 'vessel'),\n",
+       " ('5', 'vessel'),\n",
+       " ('5', 'vessel'),\n",
+       " ('5', 'vessel'),\n",
+       " ('8', 'vessel'),\n",
+       " ('9', 'vessel'),\n",
+       " ('9', 'vessel'),\n",
+       " ('10', 'vessel'),\n",
+       " ('12', 'vessel'),\n",
+       " ('27', 'vessel'),\n",
+       " ('31', 'pipe'),\n",
+       " ('33', 'pipe'),\n",
+       " ('34', 'pipe'),\n",
+       " ('35', 'pipe'),\n",
+       " ('37', 'pipe'),\n",
+       " ('40', 'vessel'),\n",
+       " ('47', 'pipe'),\n",
+       " ('47', 'pipe'),\n",
+       " ('51', 'pipe'),\n",
+       " ('51', 'pipe'),\n",
+       " ('51', 'pipe'),\n",
+       " ('51', 'pipe'),\n",
+       " ('52', 'pipe'),\n",
+       " ('53', 'pipe'),\n",
+       " ('56', 'pipe'),\n",
+       " ('57', 'pipe'),\n",
+       " ('59', 'pipe'),\n",
+       " ('60', 'pipe'),\n",
+       " ('60', 'pipe'),\n",
+       " ('65', 'vessel'),\n",
+       " ('65', 'vessel'),\n",
+       " ('70', 'vessel'),\n",
+       " ('70', 'pipe'),\n",
+       " ('74', 'vessel'),\n",
+       " ('80', 'vessel'),\n",
+       " ('87', 'vessel'),\n",
+       " ('88', 'vessel'),\n",
+       " ('90', 'vessel'),\n",
+       " ('92', 'vessel'),\n",
+       " ('101', 'vessel'),\n",
+       " ('112', 'vessel'),\n",
+       " ('112', 'pipe'),\n",
+       " ('112', 'pipe'),\n",
+       " ('116', 'pipe'),\n",
+       " ('116', 'pipe'),\n",
+       " ('116', 'pipe'),\n",
+       " ('117', 'pipe'),\n",
+       " ('117', 'pipe'),\n",
+       " ('117', 'pipe'),\n",
+       " ('117', 'pipe'),\n",
+       " ('120', 'vessel'),\n",
+       " ('121', 'vessel'),\n",
+       " ('123', 'vessel'),\n",
+       " ('124', 'vessel'),\n",
+       " ('125', 'vessel'),\n",
+       " ('127', 'vessel'),\n",
+       " ('131', 'vessel'),\n",
+       " ('133', 'vessel'),\n",
+       " ('133', 'vessel'),\n",
+       " ('137', 'vessel'),\n",
+       " ('139', 'vessel')]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get identified single words with sentence index number\n",
+    "\n",
+    "forward_identified_single_words_with_sentence_index_number = []\n",
+    "\n",
+    "for (sentence_index_number,word_as_string,word_pos_tag) in forward_single_words:\n",
+    "    \n",
+    "    if word_as_string in list_of_known_things:\n",
+    "        forward_identified_single_words_with_sentence_index_number.append((sentence_index_number,word_as_string))\n",
+    "    \n",
+    "forward_identified_single_words_with_sentence_index_number"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1101,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1657,7 +1748,7 @@
        " ('139', 'boat standard', 'NNP', 'NNP')]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1689,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
@@ -1708,7 +1799,7 @@
        " ('137', 'emergency light')]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1735,7 +1826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1743,6 +1834,7 @@
     "\n",
     "with open(\"output - Identified bigram things by vocabulary.csv\", 'w') as f:\n",
     "    write = csv.writer(f, delimiter=',', lineterminator='\\n')\n",
+    "    write.writerows(forward_identified_single_words_with_sentence_index_number)\n",
     "    write.writerows(forward_identified_bigrams_with_sentence_index_number)"
    ]
   }
