Imported section span data to merge component. #3

--- a/NLP Python Jupyter Notebooks/Merge results by sentence index number/Merge results by sentence index number.ipynb
+++ b/NLP Python Jupyter Notebooks/Merge results by sentence index number/Merge results by sentence index number.ipynb
@@ -390,6 +390,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Section 7', 2, 6),\n",
+       " ('Section 8', 7, 12),\n",
+       " ('Section 9', 13, 24),\n",
+       " ('Section 10', 25, 40),\n",
+       " ('Section 11', 41, 45),\n",
+       " ('Section 12', 46, 60),\n",
+       " ('Section 13', 61, 63),\n",
+       " ('Section 14', 64, 72),\n",
+       " ('Section 15', 73, 85),\n",
+       " ('Section 16', 86, 88),\n",
+       " ('Section 17', 89, 99),\n",
+       " ('Section 18', 100, 102),\n",
+       " ('Section 19', 103, 106),\n",
+       " ('Section 20', 107, 113),\n",
+       " ('Section 21', 114, 118),\n",
+       " ('Section 22', 119, 121),\n",
+       " ('Section 23', 122, 128),\n",
+       " ('Section 24', 129, 137),\n",
+       " ('Section 25', 138, 139)]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#\n",
+    "# input - Identify section span by sentence index number.csv\n",
+    "#\n",
+    "\n",
+    "import csv\n",
+    "\n",
+    "forward_identify_section_span_by_sentence_index_number_csv = []\n",
+    "\n",
+    "with open('input - Identify section span by sentence index number.csv', newline='\\n') as csvfile:\n",
+    "    \n",
+    "    csv_reader = csv.reader(csvfile, delimiter=',')\n",
+    "    \n",
+    "    for row in csv_reader:\n",
+    "\n",
+    "        section_as_string = row[0]\n",
+    "        span_start = row[1]\n",
+    "        span_end = row[2]\n",
+    "        \n",
+    "        forward_identify_section_span_by_sentence_index_number_csv.append((section_as_string,int(span_start),int(span_end)))\n",
+    "        \n",
+    "forward_identify_section_span_by_sentence_index_number_csv"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
